Refactor API Gateway service in Docker Compose and enhance CI configuration
Updated the Docker Compose file to rename the main-backend service to api-gateway, reflecting its role as the central entry point for client traffic. Adjusted build context, image names, and port mappings accordingly. Added a new .env.example file for the API Gateway and included necessary configurations in the CI pipeline to align with the new service structure. This refactor improves clarity and maintainability of the API Gateway setup.